// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CelebrateItem message renders accepted challenge event 1`] = `
<Card
  onPress={[Function]}
>
  <View
    flex={1}
    flexDirection="column"
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Connect(withI18nextTranslation(CelebrateItemName))
            name="John Smith"
            person={
              Object {
                "first_name": "John",
                "id": "123",
                "last_name": "Smith",
              }
            }
          />
          <CardTime
            date="2004-04-04 00:00:00 UTC"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
          ]
        }
      >
        <MyText
          style={
            Object {
              "fontSize": 14,
              "justifyContent": "flex-start",
              "lineHeight": 18,
            }
          }
        >
          John S. accepted a Challenge:
        </MyText>
        <View
          flexDirection="row"
        >
          <Button
            onPress={[Function]}
            style={
              Object {
                "marginTop": 4,
              }
            }
            type="transparent"
          >
            <MyText
              numberOfLines={2}
              style={
                Object {
                  "color": "#007398",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 18,
                  "textAlign": "left",
                }
              }
            >
              Invite a friend to church
            </MyText>
          </Button>
        </View>
      </View>
    </View>
    <Separator />
    <View
      justifyContent="flex-end"
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <Connect(CommentLikeComponent)
        event={
          Object {
            "celebrateable_type": "accepted_community_challenge",
            "changed_attribute_name": "accepted_at",
            "changed_attribute_value": "2004-04-04 00:00:00 UTC",
            "liked": false,
            "likes_count": 0,
            "object_description": "Invite a friend to church",
            "subject_person": Object {
              "first_name": "John",
              "id": "123",
              "last_name": "Smith",
            },
            "subject_person_name": "John Smith",
          }
        }
      />
    </View>
  </View>
</Card>
`;

exports[`CelebrateItem message renders completed challenge event 1`] = `
<Card
  onPress={[Function]}
>
  <View
    flex={1}
    flexDirection="column"
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Connect(withI18nextTranslation(CelebrateItemName))
            name="John Smith"
            person={
              Object {
                "first_name": "John",
                "id": "123",
                "last_name": "Smith",
              }
            }
          />
          <CardTime
            date="2004-04-04 00:00:00 UTC"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
          ]
        }
      >
        <MyText
          style={
            Object {
              "fontSize": 14,
              "justifyContent": "flex-start",
              "lineHeight": 18,
            }
          }
        >
          John S. completed a Challenge:
        </MyText>
        <View
          flexDirection="row"
        >
          <Button
            onPress={[Function]}
            style={
              Object {
                "marginTop": 4,
              }
            }
            type="transparent"
          >
            <MyText
              numberOfLines={2}
              style={
                Object {
                  "color": "#007398",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 18,
                  "textAlign": "left",
                }
              }
            >
              Invite a friend to church
            </MyText>
          </Button>
        </View>
      </View>
    </View>
    <Separator />
    <View
      justifyContent="flex-end"
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <Connect(CommentLikeComponent)
        event={
          Object {
            "celebrateable_type": "accepted_community_challenge",
            "changed_attribute_name": "completed_at",
            "changed_attribute_value": "2004-04-04 00:00:00 UTC",
            "liked": false,
            "likes_count": 0,
            "object_description": "Invite a friend to church",
            "subject_person": Object {
              "first_name": "John",
              "id": "123",
              "last_name": "Smith",
            },
            "subject_person_name": "John Smith",
          }
        }
      />
    </View>
  </View>
</Card>
`;

exports[`CelebrateItem message renders created community event 1`] = `
<Card
  onPress={[Function]}
>
  <View
    flex={1}
    flexDirection="column"
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Connect(withI18nextTranslation(CelebrateItemName))
            name="John Smith"
            organization={
              Object {
                "name": "Celebration Community",
              }
            }
            person={
              Object {
                "first_name": "John",
                "id": "123",
                "last_name": "Smith",
              }
            }
          />
          <CardTime
            date="2004-04-04 00:00:00 UTC"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
          ]
        }
      >
        <MyText
          style={
            Object {
              "fontSize": 14,
              "justifyContent": "flex-start",
              "lineHeight": 18,
            }
          }
        >
          John S. created Celebration Community!
        </MyText>
      </View>
    </View>
    <Separator />
    <View
      justifyContent="flex-end"
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <Connect(CommentLikeComponent)
        event={
          Object {
            "celebrateable_type": "organization",
            "changed_attribute_value": "2004-04-04 00:00:00 UTC",
            "liked": false,
            "likes_count": 0,
            "organization": Object {
              "name": "Celebration Community",
            },
            "subject_person": Object {
              "first_name": "John",
              "id": "123",
              "last_name": "Smith",
            },
            "subject_person_name": "John Smith",
          }
        }
      />
    </View>
  </View>
</Card>
`;

exports[`CelebrateItem message renders event with no subject person name 1`] = `
<Card
  onPress={[Function]}
>
  <View
    flex={1}
    flexDirection="column"
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Connect(withI18nextTranslation(CelebrateItemName))
            name={null}
            person={null}
          />
          <CardTime
            date="2004-04-04 00:00:00 UTC"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
          ]
        }
      >
        <MyText
          style={
            Object {
              "fontSize": 14,
              "justifyContent": "flex-start",
              "lineHeight": 18,
            }
          }
        >
          A MissionHub user completed a Step of Faith with a Forgiven person.
        </MyText>
      </View>
    </View>
    <Separator />
    <View
      justifyContent="flex-end"
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <Connect(CommentLikeComponent)
        event={
          Object {
            "adjective_attribute_value": "3",
            "celebrateable_type": "accepted_challenge",
            "changed_attribute_value": "2004-04-04 00:00:00 UTC",
            "liked": false,
            "likes_count": 0,
            "subject_person": null,
            "subject_person_name": null,
          }
        }
      />
    </View>
  </View>
</Card>
`;

exports[`CelebrateItem message renders joined community event 1`] = `
<Card
  onPress={[Function]}
>
  <View
    flex={1}
    flexDirection="column"
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Connect(withI18nextTranslation(CelebrateItemName))
            name="John Smith"
            organization={
              Object {
                "name": "Celebration Community",
              }
            }
            person={
              Object {
                "first_name": "John",
                "id": "123",
                "last_name": "Smith",
              }
            }
          />
          <CardTime
            date="2004-04-04 00:00:00 UTC"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
          ]
        }
      >
        <MyText
          style={
            Object {
              "fontSize": 14,
              "justifyContent": "flex-start",
              "lineHeight": 18,
            }
          }
        >
          John S. joined Celebration Community! Now you can see and celebrate the steps of faith they are taking.
        </MyText>
      </View>
    </View>
    <Separator />
    <View
      justifyContent="flex-end"
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <Connect(CommentLikeComponent)
        event={
          Object {
            "celebrateable_type": "organizational_permission",
            "changed_attribute_value": "2004-04-04 00:00:00 UTC",
            "liked": false,
            "likes_count": 0,
            "organization": Object {
              "name": "Celebration Community",
            },
            "subject_person": Object {
              "first_name": "John",
              "id": "123",
              "last_name": "Smith",
            },
            "subject_person_name": "John Smith",
          }
        }
      />
    </View>
  </View>
</Card>
`;

exports[`CelebrateItem message renders joined community with passed in org name 1`] = `
<Card
  onPress={[Function]}
>
  <View
    flex={1}
    flexDirection="column"
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Connect(withI18nextTranslation(CelebrateItemName))
            name="John Smith"
            organization={
              Object {
                "id": "111",
                "name": "My Real Org",
              }
            }
            person={
              Object {
                "first_name": "John",
                "id": "123",
                "last_name": "Smith",
              }
            }
          />
          <CardTime
            date="2004-04-04 00:00:00 UTC"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
          ]
        }
      >
        <MyText
          style={
            Object {
              "fontSize": 14,
              "justifyContent": "flex-start",
              "lineHeight": 18,
            }
          }
        >
          John S. joined My Real Org! Now you can see and celebrate the steps of faith they are taking.
        </MyText>
      </View>
    </View>
    <Separator />
    <View
      justifyContent="flex-end"
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <Connect(CommentLikeComponent)
        event={
          Object {
            "celebrateable_type": "organizational_permission",
            "changed_attribute_value": "2004-04-04 00:00:00 UTC",
            "liked": false,
            "likes_count": 0,
            "organization": Object {
              "name": "Celebration Community",
            },
            "subject_person": Object {
              "first_name": "John",
              "id": "123",
              "last_name": "Smith",
            },
            "subject_person_name": "John Smith",
          }
        }
      />
    </View>
  </View>
</Card>
`;

exports[`CelebrateItem message renders other interaction event 1`] = `
<Card
  onPress={[Function]}
>
  <View
    flex={1}
    flexDirection="column"
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Connect(withI18nextTranslation(CelebrateItemName))
            name="John Smith"
            person={
              Object {
                "first_name": "John",
                "id": "123",
                "last_name": "Smith",
              }
            }
          />
          <CardTime
            date="2004-04-04 00:00:00 UTC"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
          ]
        }
      >
        <MyText
          style={
            Object {
              "fontSize": 14,
              "justifyContent": "flex-start",
              "lineHeight": 18,
            }
          }
        >
          John S. had a Spiritual Conversation.
        </MyText>
      </View>
    </View>
    <Separator />
    <View
      justifyContent="flex-end"
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <Connect(CommentLikeComponent)
        event={
          Object {
            "adjective_attribute_value": 2,
            "celebrateable_type": "interaction",
            "changed_attribute_value": "2004-04-04 00:00:00 UTC",
            "liked": false,
            "likes_count": 0,
            "subject_person": Object {
              "first_name": "John",
              "id": "123",
              "last_name": "Smith",
            },
            "subject_person_name": "John Smith",
          }
        }
      />
    </View>
  </View>
</Card>
`;

exports[`CelebrateItem message renders personal decision interaction event 1`] = `
<Card
  onPress={[Function]}
>
  <View
    flex={1}
    flexDirection="column"
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Connect(withI18nextTranslation(CelebrateItemName))
            name="John Smith"
            person={
              Object {
                "first_name": "John",
                "id": "123",
                "last_name": "Smith",
              }
            }
          />
          <CardTime
            date="2004-04-04 00:00:00 UTC"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
          ]
        }
      >
        <MyText
          style={
            Object {
              "fontSize": 14,
              "justifyContent": "flex-start",
              "lineHeight": 18,
            }
          }
        >
          John S. saw someone make a Personal Decision.
        </MyText>
      </View>
    </View>
    <Separator />
    <View
      justifyContent="flex-end"
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <Connect(CommentLikeComponent)
        event={
          Object {
            "adjective_attribute_value": 4,
            "celebrateable_type": "interaction",
            "changed_attribute_value": "2004-04-04 00:00:00 UTC",
            "liked": false,
            "likes_count": 0,
            "subject_person": Object {
              "first_name": "John",
              "id": "123",
              "last_name": "Smith",
            },
            "subject_person_name": "John Smith",
          }
        }
      />
    </View>
  </View>
</Card>
`;

exports[`CelebrateItem message renders something cool happened event 1`] = `
<Card
  onPress={[Function]}
>
  <View
    flex={1}
    flexDirection="column"
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Connect(withI18nextTranslation(CelebrateItemName))
            name="John Smith"
            person={
              Object {
                "first_name": "John",
                "id": "123",
                "last_name": "Smith",
              }
            }
          />
          <CardTime
            date="2004-04-04 00:00:00 UTC"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
          ]
        }
      >
        <MyText
          style={
            Object {
              "fontSize": 14,
              "justifyContent": "flex-start",
              "lineHeight": 18,
            }
          }
        >
          John S. saw something cool happen with someone.
        </MyText>
      </View>
    </View>
    <Separator />
    <View
      justifyContent="flex-end"
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <Connect(CommentLikeComponent)
        event={
          Object {
            "adjective_attribute_value": 11,
            "celebrateable_type": "interaction",
            "changed_attribute_value": "2004-04-04 00:00:00 UTC",
            "liked": false,
            "likes_count": 0,
            "subject_person": Object {
              "first_name": "John",
              "id": "123",
              "last_name": "Smith",
            },
            "subject_person_name": "John Smith",
          }
        }
      />
    </View>
  </View>
</Card>
`;

exports[`CelebrateItem message renders step of faith event with Not Sure stage 1`] = `
<Card
  onPress={[Function]}
>
  <View
    flex={1}
    flexDirection="column"
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Connect(withI18nextTranslation(CelebrateItemName))
            name="John Smith"
            person={
              Object {
                "first_name": "John",
                "id": "123",
                "last_name": "Smith",
              }
            }
          />
          <CardTime
            date="2004-04-04 00:00:00 UTC"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
          ]
        }
      >
        <MyText
          style={
            Object {
              "fontSize": 14,
              "justifyContent": "flex-start",
              "lineHeight": 18,
            }
          }
        >
          John S. completed a Step of Faith.
        </MyText>
      </View>
    </View>
    <Separator />
    <View
      justifyContent="flex-end"
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <Connect(CommentLikeComponent)
        event={
          Object {
            "adjective_attribute_value": "6",
            "celebrateable_type": "accepted_challenge",
            "changed_attribute_value": "2004-04-04 00:00:00 UTC",
            "liked": false,
            "likes_count": 0,
            "subject_person": Object {
              "first_name": "John",
              "id": "123",
              "last_name": "Smith",
            },
            "subject_person_name": "John Smith",
          }
        }
      />
    </View>
  </View>
</Card>
`;

exports[`CelebrateItem message renders step of faith event with stage 1`] = `
<Card
  onPress={[Function]}
>
  <View
    flex={1}
    flexDirection="column"
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Connect(withI18nextTranslation(CelebrateItemName))
            name="John Smith"
            person={
              Object {
                "first_name": "John",
                "id": "123",
                "last_name": "Smith",
              }
            }
          />
          <CardTime
            date="2004-04-04 00:00:00 UTC"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
          ]
        }
      >
        <MyText
          style={
            Object {
              "fontSize": 14,
              "justifyContent": "flex-start",
              "lineHeight": 18,
            }
          }
        >
          John S. completed a Step of Faith with a Forgiven person.
        </MyText>
      </View>
    </View>
    <Separator />
    <View
      justifyContent="flex-end"
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <Connect(CommentLikeComponent)
        event={
          Object {
            "adjective_attribute_value": "3",
            "celebrateable_type": "accepted_challenge",
            "changed_attribute_value": "2004-04-04 00:00:00 UTC",
            "liked": false,
            "likes_count": 0,
            "subject_person": Object {
              "first_name": "John",
              "id": "123",
              "last_name": "Smith",
            },
            "subject_person_name": "John Smith",
          }
        }
      />
    </View>
  </View>
</Card>
`;

exports[`CelebrateItem message renders step of faith event without stage 1`] = `
<Card
  onPress={[Function]}
>
  <View
    flex={1}
    flexDirection="column"
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Connect(withI18nextTranslation(CelebrateItemName))
            name="John Smith"
            person={
              Object {
                "first_name": "John",
                "id": "123",
                "last_name": "Smith",
              }
            }
          />
          <CardTime
            date="2004-04-04 00:00:00 UTC"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
          ]
        }
      >
        <MyText
          style={
            Object {
              "fontSize": 14,
              "justifyContent": "flex-start",
              "lineHeight": 18,
            }
          }
        >
          John S. completed a Step of Faith with someone.
        </MyText>
      </View>
    </View>
    <Separator />
    <View
      justifyContent="flex-end"
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <Connect(CommentLikeComponent)
        event={
          Object {
            "celebrateable_type": "accepted_challenge",
            "changed_attribute_value": "2004-04-04 00:00:00 UTC",
            "liked": false,
            "likes_count": 0,
            "subject_person": Object {
              "first_name": "John",
              "id": "123",
              "last_name": "Smith",
            },
            "subject_person_name": "John Smith",
          }
        }
      />
    </View>
  </View>
</Card>
`;

exports[`CelebrateItem renders event for subject=me, liked=false, like count=0 1`] = `
<Card
  onPress={[Function]}
>
  <View
    flex={1}
    flexDirection="column"
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Connect(withI18nextTranslation(CelebrateItemName))
            name="John Smith"
            person={
              Object {
                "first_name": "John",
                "id": "123",
                "last_name": "Smith",
              }
            }
          />
          <CardTime
            date="2004-04-04 00:00:00 UTC"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
          ]
        }
      >
        <MyText
          style={
            Object {
              "fontSize": 14,
              "justifyContent": "flex-start",
              "lineHeight": 18,
            }
          }
        />
      </View>
    </View>
    <Separator />
    <View
      justifyContent="flex-end"
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <Connect(CommentLikeComponent)
        event={
          Object {
            "changed_attribute_value": "2004-04-04 00:00:00 UTC",
            "liked": false,
            "likes_count": 0,
            "subject_person": Object {
              "first_name": "John",
              "id": "123",
              "last_name": "Smith",
            },
            "subject_person_name": "John Smith",
          }
        }
      />
    </View>
  </View>
</Card>
`;

exports[`CelebrateItem renders event for subject=me, liked=false, like count>0 1`] = `
<Card
  onPress={[Function]}
>
  <View
    flex={1}
    flexDirection="column"
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Connect(withI18nextTranslation(CelebrateItemName))
            name="John Smith"
            person={
              Object {
                "first_name": "John",
                "id": "123",
                "last_name": "Smith",
              }
            }
          />
          <CardTime
            date="2004-04-04 00:00:00 UTC"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
          ]
        }
      >
        <MyText
          style={
            Object {
              "fontSize": 14,
              "justifyContent": "flex-start",
              "lineHeight": 18,
            }
          }
        />
      </View>
    </View>
    <Separator />
    <View
      justifyContent="flex-end"
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <Connect(CommentLikeComponent)
        event={
          Object {
            "changed_attribute_value": "2004-04-04 00:00:00 UTC",
            "liked": false,
            "likes_count": 1,
            "subject_person": Object {
              "first_name": "John",
              "id": "123",
              "last_name": "Smith",
            },
            "subject_person_name": "John Smith",
          }
        }
      />
    </View>
  </View>
</Card>
`;

exports[`CelebrateItem renders event for subject=me, liked=true, like count>0 1`] = `
<Card
  onPress={[Function]}
>
  <View
    flex={1}
    flexDirection="column"
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Connect(withI18nextTranslation(CelebrateItemName))
            name="John Smith"
            person={
              Object {
                "first_name": "John",
                "id": "123",
                "last_name": "Smith",
              }
            }
          />
          <CardTime
            date="2004-04-04 00:00:00 UTC"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
          ]
        }
      >
        <MyText
          style={
            Object {
              "fontSize": 14,
              "justifyContent": "flex-start",
              "lineHeight": 18,
            }
          }
        />
      </View>
    </View>
    <Separator />
    <View
      justifyContent="flex-end"
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <Connect(CommentLikeComponent)
        event={
          Object {
            "changed_attribute_value": "2004-04-04 00:00:00 UTC",
            "liked": true,
            "likes_count": 1,
            "subject_person": Object {
              "first_name": "John",
              "id": "123",
              "last_name": "Smith",
            },
            "subject_person_name": "John Smith",
          }
        }
      />
    </View>
  </View>
</Card>
`;

exports[`CelebrateItem renders event for subject=other, liked=false, like count=0 1`] = `
<Card
  onPress={[Function]}
>
  <View
    flex={1}
    flexDirection="column"
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Connect(withI18nextTranslation(CelebrateItemName))
            name="John Smith"
            person={
              Object {
                "first_name": "John",
                "id": "456",
                "last_name": "Smith",
              }
            }
          />
          <CardTime
            date="2004-04-04 00:00:00 UTC"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
          ]
        }
      >
        <MyText
          style={
            Object {
              "fontSize": 14,
              "justifyContent": "flex-start",
              "lineHeight": 18,
            }
          }
        />
      </View>
    </View>
    <Separator />
    <View
      justifyContent="flex-end"
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <Connect(CommentLikeComponent)
        event={
          Object {
            "changed_attribute_value": "2004-04-04 00:00:00 UTC",
            "liked": false,
            "likes_count": 0,
            "subject_person": Object {
              "first_name": "John",
              "id": "456",
              "last_name": "Smith",
            },
            "subject_person_name": "John Smith",
          }
        }
      />
    </View>
  </View>
</Card>
`;

exports[`CelebrateItem renders event for subject=other, liked=true, like count>0 1`] = `
<Card
  onPress={[Function]}
>
  <View
    flex={1}
    flexDirection="column"
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Connect(withI18nextTranslation(CelebrateItemName))
            name="John Smith"
            person={
              Object {
                "first_name": "John",
                "id": "456",
                "last_name": "Smith",
              }
            }
          />
          <CardTime
            date="2004-04-04 00:00:00 UTC"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
          ]
        }
      >
        <MyText
          style={
            Object {
              "fontSize": 14,
              "justifyContent": "flex-start",
              "lineHeight": 18,
            }
          }
        />
      </View>
    </View>
    <Separator />
    <View
      justifyContent="flex-end"
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <Connect(CommentLikeComponent)
        event={
          Object {
            "changed_attribute_value": "2004-04-04 00:00:00 UTC",
            "liked": true,
            "likes_count": 1,
            "subject_person": Object {
              "first_name": "John",
              "id": "456",
              "last_name": "Smith",
            },
            "subject_person_name": "John Smith",
          }
        }
      />
    </View>
  </View>
</Card>
`;

exports[`CelebrateItem renders event with fixed height 1`] = `
<Card
  onPress={[Function]}
>
  <View
    flex={1}
    flexDirection="column"
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Connect(withI18nextTranslation(CelebrateItemName))
            name="John Smith"
          />
          <CardTime
            date="2004-04-04 00:00:00 UTC"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {
              "height": 70,
            },
          ]
        }
      >
        <MyText
          style={
            Object {
              "fontSize": 14,
              "justifyContent": "flex-start",
              "lineHeight": 18,
            }
          }
        />
      </View>
    </View>
    <Separator />
    <View
      justifyContent="flex-end"
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <Connect(CommentLikeComponent)
        event={
          Object {
            "changed_attribute_value": "2004-04-04 00:00:00 UTC",
            "subject_person_name": "John Smith",
          }
        }
      />
    </View>
  </View>
</Card>
`;

exports[`CelebrateItem renders event with no subject person (global community event) 1`] = `
<Card
  onPress={[Function]}
>
  <View
    flex={1}
    flexDirection="column"
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Connect(withI18nextTranslation(CelebrateItemName))
            name="John Smith"
          />
          <CardTime
            date="2004-04-04 00:00:00 UTC"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
          ]
        }
      >
        <MyText
          style={
            Object {
              "fontSize": 14,
              "justifyContent": "flex-start",
              "lineHeight": 18,
            }
          }
        />
      </View>
    </View>
    <Separator />
    <View
      justifyContent="flex-end"
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <Connect(CommentLikeComponent)
        event={
          Object {
            "changed_attribute_value": "2004-04-04 00:00:00 UTC",
            "subject_person_name": "John Smith",
          }
        }
      />
    </View>
  </View>
</Card>
`;

exports[`CelebrateItem renders event with no subject person name 1`] = `
<Card
  onPress={[Function]}
>
  <View
    flex={1}
    flexDirection="column"
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Connect(withI18nextTranslation(CelebrateItemName))
            name={null}
          />
          <CardTime
            date="2004-04-04 00:00:00 UTC"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
          ]
        }
      >
        <MyText
          style={
            Object {
              "fontSize": 14,
              "justifyContent": "flex-start",
              "lineHeight": 18,
            }
          }
        />
      </View>
    </View>
    <Separator />
    <View
      justifyContent="flex-end"
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <Connect(CommentLikeComponent)
        event={
          Object {
            "changed_attribute_value": "2004-04-04 00:00:00 UTC",
            "subject_person_name": null,
          }
        }
      />
    </View>
  </View>
</Card>
`;
